--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     <title>Portfólio</title>
 </head>
 <body>
-    
+    <div class="container">
+       <header>
+        <div class="img-wrapper">
+            <img src="images/bg.jpg" alt="">
+        </div>
+        <div class="banner">
+            <h1>Web Developer & Front End Designer</h1>
+            <p> Éden Daniel</p>
+            <button> Saiba Mais </button>
+        </div>
+       </header>
+    </div>
 
     <script src="script.js"></script>
 </body>
