:package: form orcamento

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button> Saiba Mais </button>
         </div>
        </header>
-       <div class="sidebar">
+       <aside class="sidebar">
         <nav>
             <ul class="menu">
                 <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -44,8 +44,172 @@
             <a href="#"><i class="fab fa-github-alt "></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
-       </div>
+       </aside>
+
+    <!--Inicio da nossa sessão conhecimentos-->
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, quidem facilis vero, aspernatur dolore mollitia fuga eligendi consequuntur ullam suscipit expedita enim exercitationem incidunt ipsum beatae repellat? Sed, ipsa error! </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, atque laborum eius pariatur, consequuntur autem, cumque velit ullam libero illo facilis dolor necessitatibus accusantium unde repudiandae voluptatum quisquam error odit.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nihil repellat earum ad non ea aspernatur consequatur iure, delectus sapiente accusantium voluptatibus sint dolore beatae eveniet atque laboriosam quam labore.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>JavaScript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis corrupti accusantium a aliquid quos optio quia, non impedit atque minima beatae veniam autem facilis ipsum minus magni. Dolorem, molestias aliquam.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Bootstrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda repellendus, nam id sunt, quam quisquam eos exercitationem ad incidunt, in aut! Ea impedit maiores perferendis quaerat veniam non adipisci laudantium.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github-alt"></i>
+                        <h3>Git e GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae, eos veniam facilis nulla eius asperiores! Maxime minima repellat, iusto eos corporis recusandae. Perferendis, doloremque. Quam qui adipisci nemo voluptatum dignissimos!</p>
+                    </div>
+                </div>
+                <div class="conhecimentos-img-wrapper">
+                    <img src="images/conhecimentos.png" alt="Imagens Conhecimentos">
+                </div>
+            </div>
+        </section>
+        <!--Final da nossa sessão conhecimentos-->
+
+        <!--Iniciando a nossa sessão de projetos-->
+
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="images/proj1.jpg" alt="imagem do projeto ToDo"/>
+                    </div>
+                    <div class="card-info">
+                        <h2>ToDo List</h2>
+                        <h3>JavaScript</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus vero amet ipsum ratione sunt nihil, temporibus aperiam voluptas fugiat suscipit nesciunt eius dignissimos laudantium reiciendis placeat culpa distinctio est!</p>
+                        <button class="btn">Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="images/proj2.jpg" alt="imagem do projeto Maratona"/>
+                    </div>
+                    <div class="card-info">
+                        <h2>Maratona</h2>
+                        <h3>HTML, CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam impedit atque omnis quas mollitia assumenda, eaque sint rem cum quaerat, sequi corrupti, magnam ab sunt neque. Sapiente sint excepturi porro.</p>
+                        <button class="btn">Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="images/proj3.jpg" alt="imagem do projeto Casa Bela">
+                    </div>
+                    <div class="card-info">
+                        <h2>Casa Bela</h2>
+                        <h3>HTML</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio perspiciatis vel corporis sit, doloribus veniam suscipit officiis dolorem repudiandae animi quis aut facere eum sint itaque nostrum molestiae. Voluptas, iste.</p>
+                        <button class="btn">Saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Final da nossa sessão de projetos-->
+        <!--formulário de contato-->
+        <section class="sessao-contato">
+            <div class="contato-wrapper">
+                <div class="contato-left"> </div>
+               <div class="contato-right">
+                <h1>Contato</h1>
+                <form>
+                    <div class="input-group">
+                        <input type="text" class="field" id="nome">
+                        <label for="nome" class="field-label">Nome</label>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" class="field" id="email">
+                        <label for="email" class="field-label">E-mail</label>
+                    </div>
+                    <div class="input-group">
+                       <textarea class="field" id="mensagem"></textarea>
+                        <label for="mensagem" class="field-label">Mensagem</label>
+                    </div>
+                    <button type="submit" class="btn btn-submit">Enviar</button>
+                </form>
+               </div>
+            </div>
+        </section>
+        <!--final da nossa sessão de contatos-->
+
+        <!-- formulário de orçamento-->
+        <section class="sessao-orcamento">
+            <div class="orcamento-wrapper">
+                <h1>Faça um orçamento</h1>
+                <form>
+                    <label for="qtde">Qtde de Páginas</label>
+                    <input type="number" min="1" name="qtde" id="qtde">
+                    <label for="js">Preciso de um script JS</label>
+                    <input type="checkbox" name="js" id="js">
+                    <label>Layout</label>
+                    <div class="group-layout">
+                        <div>
+                            <input type="radio" name="layout" id="layout-sim">
+                            <label for="layout-sim"> Preciso de um Layout</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="layout" id="layout-nao">
+                            <label for="layout-nao"> Já tenho um Layout</label>
+                        </div>
+                    </div>
+                    <label for="prazo">Prazo</label>
+                    <input type="range" name="prazo" id="prazo">
+                    <button class="btn btn-orcamento" type="submit">Enviar</button>
+                </form>
+            </div>
+        </section>
+        <!--final do nosso formulário de orçamento-->
     </div>
-    <script src="script.js"></script>
 </body>
+<script src="script.js"></script>
 </html>
