--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="line" id="line3"></div>
             <span>Fechar</span>
         </div>
-       <header>
+       <header id="home">
         <div class="img-wrapper">
             <img src="images/bg.jpg" alt="">
         </div>
@@ -33,10 +33,10 @@
         <nav>
             <ul class="menu">
                 <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Contatos</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimento</a></li>
+                <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+                <li class="menu-item"><a href="#contatos" class="menu-link">Contatos</a></li>
+                <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
             </ul>
         </nav>
         <div class="social-media">
@@ -47,7 +47,7 @@
        </aside>
 
     <!--Inicio da nossa sessão conhecimentos-->
-        <section class="sessao-conhecimentos">
+        <section class="sessao-conhecimentos" id="conhecimentos">
             <div class="sessao-header">
                 <h1>Conhecimentos</h1>
             </div>
@@ -115,7 +115,7 @@
 
         <!--Iniciando a nossa sessão de projetos-->
 
-        <section class="sessao-projetos">
+        <section class="sessao-projetos" id="projetos">
             <div class="sessao-header">
                 <h1>Projetos</h1>
             </div>
@@ -157,7 +157,7 @@
         </section>
         <!--Final da nossa sessão de projetos-->
         <!--formulário de contato-->
-        <section class="sessao-contato">
+        <section class="sessao-contato" id="contatos">
             <div class="contato-wrapper">
                 <div class="contato-left"> </div>
                <div class="contato-right">
@@ -183,7 +183,7 @@
         <!--final da nossa sessão de contatos-->
 
         <!-- formulário de orçamento-->
-        <section class="sessao-orcamento">
+        <section class="sessao-orcamento" id="orcamento">
             <div class="orcamento-wrapper">
                 <h1>Faça um orçamento</h1>
                 <form>
@@ -203,12 +203,35 @@
                         </div>
                     </div>
                     <label for="prazo">Prazo</label>
-                    <input type="range" name="prazo" id="prazo">
+                    <input type="range" name="prazo" id="prazo" min="1" max="10">
+                    <label id="preco">R$ 0,00</label>
                     <button class="btn btn-orcamento" type="submit">Enviar</button>
                 </form>
             </div>
         </section>
         <!--final do nosso formulário de orçamento-->
+
+        <!--nicio do nosso Footer (Rodapé)-->
+        <footer>
+            <div class="footer-content">
+                <p>
+                    Copyright &copy; 2023 EDaniel's Ds - todos os direitos reservados!
+                </p>
+                <div class="social-list">
+                    <ul>
+                         <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                         <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                         <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                    </ul>
+                   
+                </div>
+            </div>
+        </footer>
+        <!--Span com o link para voltar para o topo-->
+
+        <a href="#home" id="link-topo">
+            <i class="fas fa-arrow-up"></i>
+        </a>
     </div>
 </body>
 <script src="script.js"></script>
